# wordninja2

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
tests/: test_utilities.py  test_wordninja2.py
wordninja2/: __init__.py  dataclasses.py  utilities.py  wordninja2.py
